updated footer logos and spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -162,9 +162,24 @@ nav  li {
   cursor: pointer;
 }
 
-footer{
-max-width: 10%;
-margin-left: 250px;
+.footer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.linkedInLogo {
+  width: 100px;
+  height: 50px;
+  margin-bottom: 50px;
+  cursor: pointer;
+}
+
+.githubLogo {
+  width: 100px;
+  height: 50px;
+  margin-bottom: 50px;
+  cursor: pointer;
 }
 
 textarea {
